--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -22,25 +22,29 @@ body > .container {
 .hero-unit {
   padding: 20px 60px 30px;
 }
+/* line 25, ../sass/screen.scss */
+.hero-unit h1 {
+  margin-bottom: 5px;
+}
 
-/* line 26, ../sass/screen.scss */
+/* line 29, ../sass/screen.scss */
 .carousel-control {
   top: 47%;
 }
 
-/* line 30, ../sass/screen.scss */
+/* line 33, ../sass/screen.scss */
 .carousel-inner .item {
   margin: 0 20px;
 }
 
-/* line 35, ../sass/screen.scss */
+/* line 38, ../sass/screen.scss */
 .footer {
   font-size: 12px;
   font-style: italic;
 }
 
 @media (max-width: 979px) {
-  /* line 42, ../sass/screen.scss */
+  /* line 45, ../sass/screen.scss */
   body {
     padding-top: 0;
     padding-bottom: 20px;
