--- a/www/sass/screen.scss
+++ b/www/sass/screen.scss
@@ -22,6 +22,9 @@ body > .container {
 
 .hero-unit {
   padding: 20px 60px 30px;
+  h1 {
+    margin-bottom: 5px;
+  }
 }
 .carousel-control {
   top: 47%;
