--- a/www/sass/screen.scss
+++ b/www/sass/screen.scss
@@ -47,7 +47,7 @@ h1 {
 
 .projects {
   h2 {
-    font-size: 23px;
+    font-size: 21px;
   }
   img {
     margin-bottom: 20px;
@@ -58,6 +58,9 @@ h1 {
   }
   .topbutton {
     margin-top: 30px;
+  }
+  .span2 {
+    width: 166px !important;
   }
 }
 
