--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -9,7 +9,8 @@ html {
 
 /* line 12, ../sass/screen.scss */
 body {
-  background: black url(../images/photo3.jpg) fixed;
+  background: #626462 url(../images/photo3.jpg) fixed;
+  background-size: cover;
   padding-top: 60px;
   padding-bottom: 40px;
 }
@@ -23,70 +24,76 @@ body > .container {
   border-radius: 6px;
 }
 
-/* line 28, ../sass/screen.scss */
+/* line 27, ../sass/screen.scss */
+.nojs {
+  display: none;
+}
+
+/* line 32, ../sass/screen.scss */
 .navbar-form input {
   width: 110px;
 }
 
-/* line 33, ../sass/screen.scss */
+/* line 37, ../sass/screen.scss */
 .hero-unit {
   padding: 20px 60px 30px;
 }
-/* line 35, ../sass/screen.scss */
+/* line 39, ../sass/screen.scss */
 .hero-unit h1 {
   margin-bottom: 5px;
 }
 
-/* line 39, ../sass/screen.scss */
+/* line 43, ../sass/screen.scss */
 .carousel-control {
   top: 47%;
 }
 
-/* line 43, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 .carousel-inner .item {
   margin: 0 20px;
 }
 
-/* line 48, ../sass/screen.scss */
+/* line 52, ../sass/screen.scss */
 h1 {
   margin-bottom: 30px;
 }
 
-/* line 53, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 .projects h2 {
   font-size: 18px;
   line-height: 20px;
   height: 40px;
   overflow: hidden;
 }
-/* line 59, ../sass/screen.scss */
+/* line 63, ../sass/screen.scss */
 .projects img {
   margin-bottom: 20px;
 }
-/* line 62, ../sass/screen.scss */
+/* line 66, ../sass/screen.scss */
 .projects .description {
   height: 60px;
   overflow: hidden;
 }
-/* line 66, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 .projects .topbutton {
   margin-top: 30px;
 }
-/* line 69, ../sass/screen.scss */
+/* line 73, ../sass/screen.scss */
 .projects .span2 {
   /*width: 166px !important;*/
 }
 
-/* line 75, ../sass/screen.scss */
+/* line 79, ../sass/screen.scss */
 .frontprojects ul {
   -moz-column-count: 2;
   /* Firefox */
   -webkit-column-count: 2;
   /* Safari and Chrome */
   column-count: 2;
+  margin: 0;
 }
 
-/* line 83, ../sass/screen.scss */
+/* line 88, ../sass/screen.scss */
 .gallery img {
   height: 60px;
   float: left;
@@ -94,48 +101,109 @@ h1 {
   margin-bottom: 5px;
 }
 
-/* line 91, ../sass/screen.scss */
+/* line 96, ../sass/screen.scss */
 .footer {
   font-size: 12px;
   font-style: italic;
 }
 
-/* line 97, ../sass/screen.scss */
+/* line 102, ../sass/screen.scss */
 .connect a {
   width: 64px;
   height: 64px;
   display: inline-block;
   text-indent: -9999px;
 }
-/* line 102, ../sass/screen.scss */
+/* line 107, ../sass/screen.scss */
 .connect .facebook {
   background: url(../images/social_media/facebook.png) no-repeat;
 }
-/* line 105, ../sass/screen.scss */
+/* line 110, ../sass/screen.scss */
 .connect .twitter {
   background: url(../images/social_media/twitter.png) no-repeat;
 }
-/* line 108, ../sass/screen.scss */
+/* line 113, ../sass/screen.scss */
 .connect .youtube {
   background: url(../images/social_media/youtube.png) no-repeat;
 }
 
-@media (max-width: 600px) {
-  /* line 114, ../sass/screen.scss */
-  #myCarousel {
-    display: none;
-  }
+/* line 118, ../sass/screen.scss */
+.dropdown-backdrop {
+  position: static;
 }
-@media (min-width: 1200px) {
-  /* line 121, ../sass/screen.scss */
-  .navbar-form input {
-    width: 156px;
+
+@media (min-width: 585px) and (max-width: 767px) {
+  /* line 123, ../sass/screen.scss */
+  .frontevents ul {
+    -moz-column-count: 2;
+    /* Firefox */
+    -webkit-column-count: 2;
+    /* Safari and Chrome */
+    column-count: 2;
+    margin: 0;
   }
 }
 @media (max-width: 979px) {
-  /* line 129, ../sass/screen.scss */
+  /* line 133, ../sass/screen.scss */
   body {
     padding-top: 0;
     padding-bottom: 20px;
   }
+
+  /* line 137, ../sass/screen.scss */
+  #myCarousel {
+    display: none;
+  }
+}
+/**
+  * Always show submenu on hover, instead of click. 
+  */
+/* line 146, ../sass/screen.scss */
+.sidebar-nav {
+  padding: 9px 0;
+}
+
+/* line 150, ../sass/screen.scss */
+.dropdown-menu .sub-menu {
+  left: 100%;
+  position: absolute;
+  top: 0;
+  visibility: hidden;
+  margin-top: -1px;
+}
+
+/* line 158, ../sass/screen.scss */
+.dropdown-menu li:hover .sub-menu {
+  visibility: visible;
+}
+
+/* line 162, ../sass/screen.scss */
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
+
+/* line 166, ../sass/screen.scss */
+.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
+  margin-top: 0;
+}
+
+/* line 170, ../sass/screen.scss */
+.navbar .sub-menu:before {
+  border-bottom: 7px solid transparent;
+  border-left: none;
+  border-right: 7px solid rgba(0, 0, 0, 0.2);
+  border-top: 7px solid transparent;
+  left: -7px;
+  top: 10px;
+}
+
+/* line 178, ../sass/screen.scss */
+.navbar .sub-menu:after {
+  border-top: 6px solid transparent;
+  border-left: none;
+  border-right: 6px solid #fff;
+  border-bottom: 6px solid transparent;
+  left: 10px;
+  top: 11px;
+  left: -6px;
 }
