--- a/www/sass/screen.scss
+++ b/www/sass/screen.scss
@@ -10,8 +10,8 @@ html {
 
 
 body {
-	background: #000 url(../images/photo3.jpg) fixed;
-  
+	background: #626462 url(../images/photo3.jpg) fixed;
+  background-size: cover;
   padding-top: 60px;
   padding-bottom: 40px;
 }
@@ -22,6 +22,10 @@ body > .container {
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
+}
+
+.nojs {
+  display: none;
 }
 
 .navbar-form {
@@ -76,6 +80,7 @@ h1 {
     -moz-column-count:2; /* Firefox */
     -webkit-column-count:2; /* Safari and Chrome */
     column-count:2;
+    margin: 0;
   }
 }
 
@@ -110,17 +115,16 @@ h1 {
   }
 }
 
-@media (max-width: 600px) {
-  #myCarousel {
-    display: none;
-  }
+.dropdown-backdrop {
+  position: static;
 }
 
-@media (min-width: 1200px) {
-  .navbar-form {
-    input {
-      width: 156px;
-    }
+@media (min-width: 585px) and (max-width: 767px) {
+  .frontevents ul{
+    -moz-column-count:2; /* Firefox */
+    -webkit-column-count:2; /* Safari and Chrome */
+    column-count:2;
+    margin: 0;
   }
 }
 
@@ -130,5 +134,54 @@ h1 {
     padding-top: 0;
     padding-bottom: 20px;
   }
+  #myCarousel {
+    display: none;
+  }
+}
+
+
+/**
+  * Always show submenu on hover, instead of click. 
+  */  
+.sidebar-nav {
+    padding: 9px 0;
+}
+
+.dropdown-menu .sub-menu {
+    left: 100%;
+    position: absolute;
+    top: 0;
+    visibility: hidden;
+    margin-top: -1px;
+}
+
+.dropdown-menu li:hover .sub-menu {
+    visibility: visible;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
+    margin-top: 0;
+}
+
+.navbar .sub-menu:before {
+    border-bottom: 7px solid transparent;
+    border-left: none;
+    border-right: 7px solid rgba(0, 0, 0, 0.2);
+    border-top: 7px solid transparent;
+    left: -7px;
+    top: 10px;
+}
+.navbar .sub-menu:after {
+    border-top: 6px solid transparent;
+    border-left: none;
+    border-right: 6px solid #fff;
+    border-bottom: 6px solid transparent;
+    left: 10px;
+    top: 11px;
+    left: -6px;
 }
 
