upcoming events: date and link float with same size

--- a/www/css/screen.css
+++ b/www/css/screen.css
@@ -132,8 +132,33 @@ h1 {
   position: static;
 }
 
+/* line 123, ../sass/screen.scss */
+.frontevents ul {
+  margin: 0;
+}
+/* line 125, ../sass/screen.scss */
+.frontevents ul .event {
+  list-style-type: none;
+  overflow: hidden;
+}
+/* line 128, ../sass/screen.scss */
+.frontevents ul .event .eventDate {
+  width: 55px;
+  height: 20px;
+  float: left;
+  padding-bottom: 500em;
+  margin-bottom: -500em;
+}
+/* line 135, ../sass/screen.scss */
+.frontevents ul .event .value {
+  width: 70%;
+  float: left;
+  padding-bottom: 500em;
+  margin-bottom: -500em;
+}
+
 @media (min-width: 585px) and (max-width: 767px) {
-  /* line 123, ../sass/screen.scss */
+  /* line 146, ../sass/screen.scss */
   .frontevents ul {
     -moz-column-count: 2;
     /* Firefox */
@@ -144,13 +169,13 @@ h1 {
   }
 }
 @media (max-width: 979px) {
-  /* line 133, ../sass/screen.scss */
+  /* line 156, ../sass/screen.scss */
   body {
     padding-top: 0;
     padding-bottom: 20px;
   }
 
-  /* line 137, ../sass/screen.scss */
+  /* line 160, ../sass/screen.scss */
   #myCarousel {
     display: none;
   }
@@ -158,12 +183,12 @@ h1 {
 /**
   * Always show submenu on hover, instead of click. 
   */
-/* line 146, ../sass/screen.scss */
+/* line 169, ../sass/screen.scss */
 .sidebar-nav {
   padding: 9px 0;
 }
 
-/* line 150, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
 .dropdown-menu .sub-menu {
   left: 100%;
   position: absolute;
@@ -172,22 +197,22 @@ h1 {
   margin-top: -1px;
 }
 
-/* line 158, ../sass/screen.scss */
+/* line 181, ../sass/screen.scss */
 .dropdown-menu li:hover .sub-menu {
   visibility: visible;
 }
 
-/* line 162, ../sass/screen.scss */
+/* line 185, ../sass/screen.scss */
 .dropdown:hover .dropdown-menu {
   display: block;
 }
 
-/* line 166, ../sass/screen.scss */
+/* line 189, ../sass/screen.scss */
 .nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
   margin-top: 0;
 }
 
-/* line 170, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 .navbar .sub-menu:before {
   border-bottom: 7px solid transparent;
   border-left: none;
@@ -197,7 +222,7 @@ h1 {
   top: 10px;
 }
 
-/* line 178, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 .navbar .sub-menu:after {
   border-top: 6px solid transparent;
   border-left: none;
